dataset1235/2025-2/2318198438/users/323753343/executions/2601575092_1964285824.log
== RUN (2025-08-28 00:47:44)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 50 % 2 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:36:35)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  Ellipsis
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:48:10)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 107 % 2 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:48:09)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 107 % 2 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:48:02)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 53 % 2 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:50:29)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 52 % 11 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:51:11)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 52 % 11)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:34:49)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", ...)

print("Multiplicacao: ", ...)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  Ellipsis
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:45:26)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 26 % 3 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:35:14)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", ...)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  Ellipsis
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:50:36)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 52 % 11 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:50:05)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 45 % 11 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:47:54)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 51 % 2 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:50:15)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 49 % 11 )

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:51:03)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 52 % 11)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:36:17)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  Ellipsis
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:34:38)
-- CODE: 
Print("Adicao: ", 5 + 3)

print("Subtracao: ", ...)

print("Multiplicacao: ", ...)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Print("Adicao: ", 5 + 3)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Print("Adicao: ", 5 + 3)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:51:13)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 52 % 11)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:42:15)
-- CODE: 
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 // 2)

print("Resto: ", 64 % 8)

print("Potenciacao: ", ...)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  Ellipsis
-- TEST CASE 2:
---- input:
x
---- correct output:
Adicao:  8
Subtracao: 8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
